updated getUserId from token
